--- a/gradle.properties
+++ b/gradle.properties
@@ -21,14 +21,14 @@ mod.link.sources  = https://github.com/TheCSDev/mc-tcdcommons
 mod.link.issues   = https://github.com/TheCSDev/mc-tcdcommons/issues
 
 # 'pack.mcmeta' properties
-pack.format = 81
+pack.format = 88
 
 # Minecraft properties
-minecraft.version = 1.21.8
+minecraft.version = 1.21.9
 
 # Fabric properties
-fabric.loader_version = 0.17.0
-fabric.api_version    = 0.130.0+1.21.8
+fabric.loader_version = 0.17.2
+fabric.api_version    = 0.134.0+1.21.9
 
     # fabric.mod.json properties
     fabric.json.entrypoints.main    = io.github.thecsdev.tcdcommons.fabric.TCDCommonsFabric
@@ -37,22 +37,22 @@ fabric.api_version    = 0.130.0+1.21.8
     fabric.json.entrypoints.modmenu = io.github.thecsdev.tcdcommons.fabric.modmenu.TModMenuApiImpl
 
     fabric.json.depends.java         = >=21
-    fabric.json.depends.minecraft    = ~1.21.8
-    fabric.json.depends.fabricloader = >=0.17.0
-    fabric.json.depends.fabric-api   = >=0.130.0
-    fabric.json.depends.architectury = >=17.0.8
+    fabric.json.depends.minecraft    = ~1.21.9
+    fabric.json.depends.fabricloader = >=0.17.2
+    fabric.json.depends.fabric-api   = >=0.134.0
+    fabric.json.depends.architectury = >=18.0.3
 
     # Mod-Menu properties
-    modmenu.version = 12.0.0-beta.1
+    modmenu.version = 16.0.0-rc.1
 
 # Neo-Forge properties
-neoforge.version = 21.8.27
+neoforge.version = 21.9.9-beta
 
     # neoforge.mods.toml properties
     net.toml.loaderVersion             = [2,)
-    neo.toml.dependencies.neoforge     = [21,)
-    neo.toml.dependencies.minecraft    = [1.21.8,)
-    neo.toml.dependencies.architectury = [17.0.8,)
+    neo.toml.dependencies.neoforge     = [21.9.8,)
+    neo.toml.dependencies.minecraft    = [1.21.9,)
+    neo.toml.dependencies.architectury = [18.0.3,)
 
 # Architectury properties
-architectury.version = 17.0.8
+architectury.version = 18.0.3
