--- a/gradle.properties
+++ b/gradle.properties
@@ -24,11 +24,11 @@ mod.link.issues   = https://github.com/TheCSDev/mc-tcdcommons/issues
 pack.format = 88
 
 # Minecraft properties
-minecraft.version = 1.21.9
+minecraft.version = 1.21.10
 
 # Fabric properties
-fabric.loader_version = 0.17.2
-fabric.api_version    = 0.134.0+1.21.9
+fabric.loader_version = 0.17.3
+fabric.api_version    = 0.135.0+1.21.10
 
     # fabric.mod.json properties
     fabric.json.entrypoints.main    = io.github.thecsdev.tcdcommons.fabric.TCDCommonsFabric
@@ -37,22 +37,22 @@ fabric.api_version    = 0.134.0+1.21.9
     fabric.json.entrypoints.modmenu = io.github.thecsdev.tcdcommons.fabric.modmenu.TModMenuApiImpl
 
     fabric.json.depends.java         = >=21
-    fabric.json.depends.minecraft    = ~1.21.9
-    fabric.json.depends.fabricloader = >=0.17.2
-    fabric.json.depends.fabric-api   = >=0.134.0
-    fabric.json.depends.architectury = >=18.0.3
+    fabric.json.depends.minecraft    = >=1.21.10
+    fabric.json.depends.fabricloader = >=0.17.3
+    fabric.json.depends.fabric-api   = >=0.135.0
+    fabric.json.depends.architectury = >=18.0.5
 
     # Mod-Menu properties
     modmenu.version = 16.0.0-rc.1
 
 # Neo-Forge properties
-neoforge.version = 21.9.9-beta
+neoforge.version = 21.10.16-beta
 
     # neoforge.mods.toml properties
     net.toml.loaderVersion             = [2,)
-    neo.toml.dependencies.neoforge     = [21.9.8,)
-    neo.toml.dependencies.minecraft    = [1.21.9,)
-    neo.toml.dependencies.architectury = [18.0.3,)
+    neo.toml.dependencies.neoforge     = [21.10.16-beta,)
+    neo.toml.dependencies.minecraft    = [1.21.10,)
+    neo.toml.dependencies.architectury = [18.0.5,)
 
 # Architectury properties
-architectury.version = 18.0.3
+architectury.version = 18.0.5
